[workspace]
members = [
    "events-tasks",
    "mpsc-oneshot",
    "tokio-tutorial",
]

[workspace.package]
authors = ["Keith Sharp <kms@passback.co.uk"]
description = "Small experiments in writing parallel, concurrent, and asynchronous Rust programs."
license = "AGPL-3.0-or-later"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
