[package]
name = "mpsc-oneshot"
authors = ["Keith Sharp <kms@passback.co.uk"]
description = "Communicating between threads with Tokio MPSC and Oneshot channels"
license = "AGPL-3.0-or-later"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
uuid = { version = "1.3.2", features = ["v4"] }
